charts/postgres/1.0.0/README.md
# postgres

![Version: 1.0.0](https://img.shields.io/badge/Version-1.0.0-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 14.1.0.61](https://img.shields.io/badge/AppVersion-14.1.0.61-informational?style=flat-square)

Unmodified Postgres with some useful plugins.

**Homepage:** <https://www.postgresql.org>

## Source Code

* <https://github.com/supabase/postgres>
* <https://supabase.com>

## Requirements

Kubernetes: `>=1.19.0-0`

| Repository | Name | Version |
|------------|------|---------|
| https://library-charts.truecharts.org | common | 10.5.0 |

## Values

| Key | Type | Default | Description |
|-----|------|---------|-------------|
| controller.replicas | int | `1` |  |
| controller.revisionHistoryLimit | int | `3` |  |
| controller.rollingUpdate.partition | string | `nil` |  |
| controller.rollingUpdate.surge | string | `nil` |  |
| controller.rollingUpdate.unavailable | int | `1` |  |
| controller.strategy | string | `"RollingUpdate"` |  |
| controller.type | string | `"statefulset"` |  |
| env.POSTGRES_PASSWORD.secretKeyRef.key | string | `"postgres-password"` |  |
| env.POSTGRES_PASSWORD.secretKeyRef.name | string | `"postgres-credentials"` |  |
| env.POSTGRES_USER.secretKeyRef.key | string | `"postgres-username"` |  |
| env.POSTGRES_USER.secretKeyRef.name | string | `"postgres-credentials"` |  |
| image.pullPolicy | string | `"IfNotPresent"` |  |
| image.repository | string | `"supabase/postgres"` |  |
| image.tag | string | `"14.1.0.61"` |  |
| persistence.data.enabled | bool | `true` |  |
| persistence.data.mountPath | string | `"/var/lib/postgresql/data"` |  |
| podSecurityContext.fsGroup | int | `999` |  |
| podSecurityContext.runAsGroup | int | `999` |  |
| podSecurityContext.runAsUser | int | `999` |  |
| portal.enabled | bool | `false` |  |
| postgresPassword | string | `""` |  |
| postgresUsername | string | `"postgres"` |  |
| probes.liveness.custom | bool | `true` |  |
| probes.liveness.enabled | bool | `true` |  |
| probes.liveness.spec.exec.command[0] | string | `"sh"` |  |
| probes.liveness.spec.exec.command[1] | string | `"-c"` |  |
| probes.liveness.spec.exec.command[2] | string | `"until pg_isready -U ${POSTGRES_USER} -h localhost; do sleep 2 ; done"` |  |
| probes.readiness.custom | bool | `true` |  |
| probes.readiness.enabled | bool | `true` |  |
| probes.readiness.spec.exec.command[0] | string | `"sh"` |  |
| probes.readiness.spec.exec.command[1] | string | `"-c"` |  |
| probes.readiness.spec.exec.command[2] | string | `"until pg_isready -U ${POSTGRES_USER} -h localhost; do sleep 2 ; done"` |  |
| probes.startup.custom | bool | `true` |  |
| probes.startup.enabled | bool | `true` |  |
| probes.startup.spec.exec.command[0] | string | `"sh"` |  |
| probes.startup.spec.exec.command[1] | string | `"-c"` |  |
| probes.startup.spec.exec.command[2] | string | `"until pg_isready -U ${POSTGRES_USER} -h localhost; do sleep 2 ; done"` |  |
| security.PUID | int | `999` |  |
| securityContext.readOnlyRootFilesystem | bool | `false` |  |
| service.main.ports.main.port | int | `5432` |  |
| service.main.ports.main.targetPort | int | `5432` |  |

----------------------------------------------
Autogenerated from chart metadata using [helm-docs v1.11.0](https://github.com/norwoodj/helm-docs/releases/v1.11.0)
